Fix credit card type auto-select This is a pretty basic version of this, that being said, it was a serious pain in the ass to get right. I will be doign some more editing of this in a little bit, I think it would look good to have just one card icon at the end of the card number input that changes to the card type you entered. But in lue of that, I am going to move on to re-styling the expiration date boxes and the CVV2 code box. I'm thinking of making the CVV2 code box small and have it right align, that way we can throw a little helper image to the left so people know what it is. I'd also like to change the label to say CVV or CVV2, as people probably know this label better than "Card Validation Code". The smaller sized box will help too. I will limit this to 4 characters, as AMEX is 4, the others are 3, (or maybe it's Discover) either way, it should be limited, this could be tied to the card type, but that's not very important for now.
Former-commit-id: fd42e4e54bc3b5b20c03c8713475ffbd03787c2f

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -171,7 +171,7 @@ img, button, input {
     .cart-cartbox-table-product-detail-img {
         width: 100%;
         height: auto;
-        margin: 7px 5px 4px;
+        margin: 7px 5px 2px;
         text-decoration: none;
     }
 
@@ -766,8 +766,40 @@ img, button, input {
             padding-top: 20px;
         }
 
-        /* One Page Checkout Review Section
-        ******************************************************/
+            /* Credit Cart Type Auto-Select Styles
+            ******************************************************/
+            #credit-cart-type-wrap {
+                height: 0;
+                margin-left: -10000px;
+            }
+            #credit-card-type {width:228px;}
+            #credit-card-type li {
+                display: block;
+                width: 51px;
+                height: 32px;
+                background: url('../images/credit-card-icons.jpg') 0 -32px no-repeat;
+                margin: 5px 6px 0 0;
+                overflow: hidden;
+                text-indent: -500em;
+                float: left;
+                -webkit-transition: all .2s;
+                -moz-transition: all .2s;
+                -ms-transition: all .2s;
+                -o-transition: all .2s;
+                transition: all .2s;
+            }
+            #credit-card-type .VI {background-position: 0px -32px;}
+            #credit-card-type .MC {background-position: -51px -32px;}
+            #credit-card-type .AE {background-position: -102px -32px;}
+            #credit-card-type .DI {background-position: -153px -32px;}
+            #credit-card-type .VI.active {background-position: 0px 0px;}
+            #credit-card-type .MC.active  {background-position: -51px 0px;}
+            #credit-card-type .AE.active  {background-position: -102px 0px;}
+            #credit-card-type .DI.active  {background-position: -153px 0px;}
+
+
+/* One Page Checkout Review Section
+******************************************************/
         .opc-wrapper-opc #checkout-review-table .a-right,
         .opc-wrapper-opc #checkout-review-table .a-center,
         .opc-wrapper-opc #checkout-review-table .a-left {
